fix overflowing text for small screen

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -40,6 +40,10 @@ header {
     margin-top: 24px;
   }
 
+  .container {
+    margin: 24px;
+  }
+
   .information {
     font-size: 12px;
   }
@@ -49,7 +53,18 @@ header {
   }
 
   .selectedTitle {
+    font-size: 12px;
+  }
+
+  .percentage {
     font-size: 16px;
+    font-weight: bold;
+  }
+
+  .rating-img {
+    width: 16px;
+    height: auto;
+    margin-right: 4px;
   }
 
 }
